[package]
name = "data_vault"
version = "0.1.3"
authors = ["tcross <tom.bz2@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/credit_card"
readme = "README.md"
repository = "https://github.com/chmoder/data_vault/"
description = "A credit card tokenization data vault library"
license = "MIT"

[dependencies]
deadpool-redis = { version = "^0.6" }
config-crate = {package = "config", version = "^0.10", default-features = false }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
async-trait = "^0.1" # remove some day hopefully
credit_card = { version = "^0.1" }
dotenv = "^0.15"
hex = "^0.4"

block-modes = "^0.5"
aes = "^0.4"

rand = "^0.7"
blake3 = "^0.3"

[dev-dependencies]
tokio = { version = "^0.2", features = ["sync", "macros", "rt-core"] }
criterion = "^0.3"

[[bench]]
name = "data_vault_benchmark"
harness = false
