[package]
name = "data_vault"
version = "0.2.1"
authors = ["tcross <tom.bz2@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/data_vault"
readme = "README.md"
repository = "https://github.com/chmoder/data_vault/"
description = "Data Vault is a modular, pragmatic, credit card vault for Rust."
license = "MIT"

[dependencies]
deadpool-redis = { version = "^0.6" }
config-crate = {package = "config", version = "^0.10", default-features = false }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
async-trait = "^0.1" # remove some day hopefully
credit_card = { version = "^0.1" }
dotenv = "^0.15"
hex = "^0.4"
block-modes = "^0.5"
aes-gcm-siv = "0.5.0"
aes = "^0.4"
rand = "^0.7"
blake3 = "^0.3"

[dev-dependencies]
criterion = "^0.3"
env_logger = "^0.7"
log = "^0.4"
futures = "^0.3"
tokio = { version = "^0.2", features = ["full"] }

[lib]
bench = false

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[[bench]]
name = "data_vault_benchmark"
harness = false

[[example]]
name = "benchmark"