[package]
name = "data_vault"
version = "0.3.3"
authors = ["tcross <tom.bz2@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/data_vault"
readme = "README.md"
repository = "https://github.com/chmoder/data_vault/"
description = "Data Vault is a modular, pragmatic, credit card vault for Rust."
license = "MIT"

[dependencies]
deadpool-redis = { version = "^0.7" }
redis = { version = "0.19", default-features = false, features = ["aio"] }
deadpool-postgres = { version = "^0.7" }
config-crate = {package = "config", version = "^0.10", default-features = false }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
async-trait = "^0.1" # remove some day hopefully
credit_card = { version = "^0.1" }
dotenv = "^0.15"
hex = "^0.4"
block-modes = "^0.7"
aes-gcm-siv = "^0.9"
aes = "^0.6"
rand = "^0.8"
blake3 = "^0.3"

[dev-dependencies]
criterion = "^0.3"
env_logger = "^0.8"
log = "^0.4"
futures = "^0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
redis = { version = "0.19", default-features = false, features = ["tokio-comp"] }

[lib]
bench = false

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[[bench]]
name = "data_vault_benchmark"
harness = false